--- a/pdf-service/Dockerfile
+++ b/pdf-service/Dockerfile
@@ -36,7 +36,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install --omit=dev
 
 # Copy source code
 COPY src/ ./src/
