Add Cloudflare cache purge after Hugo deploy
- Add CLOUDFLARE_ZONE_ID and CLOUDFLARE_API_TOKEN env vars
- Add purge_cloudflare_cache() helper function
- Call cache purge after successful Hugo build
- Return cache purge status in deploy response

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -90,6 +90,8 @@ services:
       - CONTENT_PATH=/content/blog
       - HUGO_SITE_PATH=/hugo-site
       - HUGO_OUTPUT_PATH=/output
+      - CLOUDFLARE_ZONE_ID=${CLOUDFLARE_ZONE_ID}
+      - CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN}
     volumes:
       - ./grandprixrealty.agency/content/blog:/content/blog:rw
       - ./grandprixrealty.agency:/hugo-site:rw
